--- a/tasks/master.yml
+++ b/tasks/master.yml
@@ -27,7 +27,7 @@
 - name: "Copy Redis replication cluster systemd unit file"
   template:
     src: "templates/redis-cluster-replica-systemd.j2"
-    dest: "/etc/systemd/system/redis-cluster.service"
+    dest: "/etc/systemd/system/{{ redis-cluster_service }}"
     owner: "root"
     group:  "root"
     mode: 0644
